# vulkan-rust-examples

./: Cargo.toml
shaders/hello_triangle/: compile_shaders.bat  frag.spv  triangle.frag  triangle.vert  vert.spv
src/: cube_example.rs  hello_triangle.rs  main.rs  render_app.rs  util.rs  vulkan_core.rs  vulkan_render_base.rs
src/math/: vec2.rs
src/util/: image_extent.rs
src/vulkan_core/: buffer_factory.rs  cmd.rs  debug.rs  pipeline.rs  render_pass.rs  semaphore.rs  structs.rs  surface.rs  swapchain.rs  sync.rs  tools.rs  vulkan_debug.rs  vulkan_surface.rs  vulkan_swapchain.rs
