[package]
name = "vulkan-rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3+1.3.251"
winit = "0.20.0"
colored = "2.1.0"
once_cell = "1.19.0"
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }
